fixed gradle build for TranslationTables - NEARLY finished...
but not working correctly... small changes required